--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,32 @@
-<h1>Make your form here</h1>
+<h1>PIRATES!</h1>
+<body>
+  <form action="/pirates" method="POST" >
+    <h3>Pirate</h3>
+    <div id="pirate">
+      <label for="pirate[name]">Name:</label>
+      <input name="pirate[name]">
+      <label for="pirate[weight]">Weight:</label>
+      <input name="pirate[weight]">
+      <label for="pirate[height]">Height:</label>
+      <input name="pirate[height]">
+    </div>
+    <h3>Ships</h3>
+    <div id="ship1">
+      <label for="pirate[ships][][name]">Name:</label>
+      <input name="pirate[ships][][name]">
+      <label for="pirate[ships][][type]">Type:</label>
+      <input name="pirate[ships][][type]">
+      <label for="pirate[ships][][booty]">Booty:</label>
+      <input name="pirate[ships][][booty">
+    </div>
+    <div id="ship2">
+      <label for="pirate[ships][][name]">Name:</label>
+      <input name="pirate[ships][][name]">
+      <label for="pirate[ships][][type]">Type:</label>
+      <input name="pirate[ships][][type]">
+      <label for="pirate[ships][][booty]">Booty:</label>
+      <input name="pirate[ships][][booty">
+    </div>
+    <input type="submit" value="submit">
+  </form>
+</body>
